--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,17 +5,13 @@ driver:
 provisioner:
   name: chef_zero
 
-# Uncomment the following verifier to leverage Inspec instead of Busser (the
-# default verifier)
-# verifier:
-#   name: inspec
-
 platforms:
-  - name: ubuntu-14.04
   - name: centos-7.1
+    driver:
+      box: opscode-centos-7.0
 
 suites:
   - name: default
     run_list:
-      - recipe[mac-install::default]
+      - recipe[brew-mac::default]
     attributes:
